# eu-cyber-incidents

./: .gitignore  LICENSE  README.md  app.py  data_pipeline.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/processed/: filtered_attacks.csv
tests/: test_aggregations.py  test_dashboard_service.py  test_data_loader.py  test_data_pipeline.py  test_geoip_utils.py
utils/: aggregations.py  dashboard_service.py  data_export.py  data_loader.py  eu_countries.py  geoip_utils.py  plot_utils.py  ui_components.py
