[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eu-cyber-incidents"
version = "0.1.0"
description = "Interactive Streamlit dashboard for EU cyber incident analytics."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Portfolio/Educational" }
authors = [
  { name = "Carlos Prados" }
]
dependencies = [
  "streamlit==1.55.0",
  "pandas==2.3.3",
  "plotly==6.6.0",
  "geoip2==5.2.0",
  "kagglehub==1.0.0",
]

[project.urls]
Homepage = "https://github.com/carlosdprados/eu-cyber-incidents"
Repository = "https://github.com/carlosdprados/eu-cyber-incidents"
"Live Demo" = "https://eu-cyber-incidents.streamlit.app"

[project.optional-dependencies]
dev = [
  "ruff==0.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  ".venv",
  "__pycache__",
  "data",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["F401"]
